src/test/ui/issues/70000-79999/issue-77218.stderr
error[E0658]: destructuring assignments are unstable
  --> $DIR/issue-77218.rs:3:19
   |
LL |     while Some(0) = value.get(0) {
   |           ------- ^
   |           |
   |           cannot assign to this expression
   |
   = note: see issue #71126 <https://github.com/rust-lang/rust/issues/71126> for more information
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0070]: invalid left-hand side of assignment
  --> $DIR/issue-77218.rs:3:19
   |
LL |     while Some(0) = value.get(0) {
   |                -  ^
   |                |
   |                cannot assign to this expression

error[E0308]: mismatched types
  --> $DIR/issue-77218.rs:3:16
   |
LL |     while Some(0) = value.get(0) {
   |                ^
   |                |
   |                expected integer, found `&u8`
   |                help: consider dereferencing the borrow: `*0`

error[E0308]: mismatched types
  --> $DIR/issue-77218.rs:3:11
   |
LL |     while Some(0) = value.get(0) {
   |           ^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0070, E0308, E0658.
For more information about an error, try `rustc --explain E0070`.
